[Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for likes (#450)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
@@ -330,9 +330,8 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
           width: 100%;
           height: 100%;
           position: absolute;
-          background: @baseColorMedium;
+          background: @baseColorLight;
           border-radius: 50%;
-          opacity: .5;
           z-index: 1;
         }
         .seeMoreLikersDetails {
